--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Team Work</h2>
-                                <p>In the four years I have been working, I have participated in several projects where teamwork was very important.
+                                <p> I have experience participating in several projects where teamwork was very important.
                                     Additionally, during my studies, I took part in various team projects.</p>
                                </div>
                            </div>
@@ -209,7 +209,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Problem solving</h2>
-                                <p>For the past year, I have been working as an API problem solver, 
+                                <p> I have been working as an API problem solver, 
                                     assisting others in resolving complex issues related to API 
                                     integration and functionality.</p>
                                </div>
@@ -222,8 +222,7 @@
                                 <h2>Creativity</h2>
                                 <p>I consider creativity one of my strongest qualities. 
                                     Whether it’s finding innovative solutions to challenges or 
-                                    thinking outside the box to improve processes, 
-                                    I enjoy approaching problems from unique perspectives.</p>
+                                    thinking outside the box to improve processes.</p>
                             </div>
                         </div>
                     </div>
