--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Team Work</h2>
-                                <p> I have experience participating in several projects where teamwork was very important.
-                                    Additionally, during my studies, I took part in various team projects.</p>
+                                <p> I have experience participating in several projects where teamwork was very important, both at companies and at university                                    </p>
                                </div>
                            </div>
                            <div class="service-two service wow">
@@ -210,8 +209,7 @@
                                <div class="service-description">
                                 <h2>Problem solving</h2>
                                 <p> I have been working as an API problem solver, 
-                                    assisting others in resolving complex issues related to API 
-                                    integration and functionality.</p>
+                                    assisting others in resolving complex issues related to API .</p>
                                </div>
                            </div>
                            <div class="service-three service wow">
