--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">60%</div>
+                 <div class="html-progress wow"></div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -249,7 +249,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="SQL-progress wow">75%</div>
+                 <div class="SQL-progress wow"></div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -259,7 +259,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="Python-progress wow">50%</div>
+                 <div class="Python-progress wow"></div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -269,7 +269,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="Java-progress wow">50%</div>
+                 <div class="Java-progress wow"></div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -279,7 +279,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">65%</div>
+                 <div class="jquery-progress wow"></div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -289,7 +289,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="R-progress wow">60%</div>
+                 <div class="R-progress wow"></div>
                     </div>
                     </div>
                 </div>
