--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                      <br>
                <span class="about-second-line">Digital Industry Engineer from the University of Deusto, and currently studying the master's degree in engineering and software systems technology at the Polytechnic University of Valencia. I am passionate about the data science sector.</span>
                <div class="cv">
-                <a href="https://drive.google.com/file/d/1X4w7-G82B8KZVb8G8A2hlpIgpMnr7iRM/view?usp=drive_link"><button>Download <span class="colors">CV</span></button></a>
+                <a href="https://drive.google.com/file/d/109lBdd3Su_VdjXQ-pankZ1KHNfKhhNzg/view?usp=sharing"><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
