--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                      <br>
                <span class="about-second-line">Digital Industry Engineer from the University of Deusto, and currently studying the master's degree in engineering and software systems technology at the Polytechnic University of Valencia. I am passionate about the data science sector.</span>
                <div class="cv">
-                <a href="https://drive.google.com/file/d/109lBdd3Su_VdjXQ-pankZ1KHNfKhhNzg/view?usp=sharing"><button>Download <span class="colors">CV</span></button></a>
+                <a href="https://drive.google.com/file/d/1NgwIpS4V9a5mRAuqlEy30MCnDbPlnZuZ/view"><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpeg" alt="My Image">
+                <img src="images/about1.png" alt="Your Image">
             </div>
             </div>
     
@@ -199,7 +199,8 @@
                                </div>
                                <div class="service-description">
                                 <h2>Team Work</h2>
-                                <p> I have experience participating in several projects where teamwork was very important, both at companies and at university                                    </p>
+                                <p>In the four years I have been working, I have participated in several projects where teamwork was very important.
+                                    Additionally, during my studies, I took part in various team projects.</p>
                                </div>
                            </div>
                            <div class="service-two service wow">
@@ -208,8 +209,9 @@
                                </div>
                                <div class="service-description">
                                 <h2>Problem solving</h2>
-                                <p> I have been working as an API problem solver, 
-                                    assisting others in resolving complex issues related to API .</p>
+                                <p>For the past year, I have been working as an API problem solver, 
+                                    assisting others in resolving complex issues related to API 
+                                    integration and functionality.</p>
                                </div>
                            </div>
                            <div class="service-three service wow">
@@ -220,7 +222,8 @@
                                 <h2>Creativity</h2>
                                 <p>I consider creativity one of my strongest qualities. 
                                     Whether it’s finding innovative solutions to challenges or 
-                                    thinking outside the box to improve processes.</p>
+                                    thinking outside the box to improve processes, 
+                                    I enjoy approaching problems from unique perspectives.</p>
                             </div>
                         </div>
                     </div>
@@ -339,14 +342,13 @@
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
                      <div class="portfolio-image">
-                        <img src="images/portfolio-first.png" alt="portfolio-first">
+                        <img src="images/portfolio-first.jpg" alt="portfolio-first">
                      </div>
                      <div class="portfolio-text">
-                         <h2>Credit Card Detection</h2>
-                         <p>This program implements a neural network model to classify credit card transactions as legitimate or fraudulent using a simulated dataset. 
-                            The dataset contains transactions from January 1, 2019, to December 31, 2020, and includes both legitimate and fraud transactions from 1,000 customers 
-                            interacting with a pool of 800 merchants.</p>
-                         <div class="button"><a href="https://github.com/JuanColonGarcia/Credit_Card_Detection"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <h2>Metaprogram</h2>
+                         <p>A metaprogram capable of generating the 
+                            control flow graph for different programs using the JavaParser library.</p>
+                         <div class="button"><a href="https://github.com/JuanColonGarcia/Metaprogram"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
                  <div class="portfolio portfolio-second">
@@ -354,13 +356,10 @@
                         <img src="images/portfolio-second.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Plane price estimation</h2>
-                        <p>The objective of this project is to predict flight prices using a dataset obtained from the "Ease My Trip" website. 
-                            To achieve this, we will employ the 'Linear Regression' and random forest algorithms, which are effective for training the dataset and predicting continuous target variables. 
-                            "Ease My Trip" is an online platform where potential passengers can book flight tickets, making it a valuable resource for travelers. 
-
-                        </p>
-                        <div class="button"><a href="https://github.com/JuanColonGarcia/Plane-price-estimation"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>AndroidProject</h2>
+                        <p>This Android application allows users to interact with a dynamic environment where images of different objects 
+                            (such as trees, benches, rivers, and rocks) can be added, moved, and resized on the screen.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/AndroidProject2"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
              
@@ -369,23 +368,70 @@
                         <img src="images/portfolio-third.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Voice Recognition</h2>
-                        <p>An app that recognizes your voice and changes the background color and a figure based on what you tell the computer.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>chatbot</h2>
+                        <p>Conversational bot that recommends movies. It uses the services of a CLUIS App published as an Azure resource.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/chatbot"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
-              <!--<div class="portfolio portfolio-fourth">
+                <div class="portfolio portfolio-fourth">
                     <div class=" portfolio-image">
                         <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Wow Graphics</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                             expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>Plane price estimation</h2>
+                        <p>The objective of this project is to predict flight prices using a dataset obtained from the "Ease My Trip" website. 
+                            To achieve this, we will employ the 'Linear Regression' and random forest algorithms, which are effective for training the dataset and predicting continuous target variables. 
+                            "Ease My Trip" is an online platform where potential passengers can book flight tickets, making it a valuable resource for travelers.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/Plane-price-estimation"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div> 
-                </div>  --> 
-                 </div>
+                </div>
+
+                <div class="portfolio portfolio-fifth">
+                    <div class="portfolio-image">
+                        <img src="images/portfolio-fifth.jpg" alt="portfolio-fifth">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>RESTful Services with Spring Boot</h2>
+                        <p>This project involves creating RESTful services with Spring Boot and developing Python/Java clients to consume them. It covers REST service implementation, task list management (ToDoList), 
+                         database access with multi-layer architecture, and query parameters in RESTful APIs.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/RESTful-Services-with-Spring-Boot"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                    </div>
+                </div>
+
+                <div class="portfolio portfolio-sixth">
+                    <div class="portfolio-image">
+                       <img src="images/portfolio-sixth.png" alt="portfolio-sixth">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>Credit Card Detection</h2>
+                        <p>This program implements a neural network model to classify credit card transactions as legitimate or fraudulent using a simulated dataset. 
+                           The dataset contains transactions from January 1, 2019, to December 31, 2020, and includes both legitimate and fraud transactions from 1,000 customers 
+                           interacting with a pool of 800 merchants.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/Credit_Card_Detection"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                    </div>
+                </div>        
+               <div class="portfolio portfolio-seventh">
+                   <div class="portfolio-image">
+                       <img src="images/portfolio-seventh.jpg" alt="portfolio-seventh">
+                   </div>
+                   <div class="portfolio-text">
+                       <h2>Voice Recognition</h2>
+                       <p>An app that recognizes your voice and changes the background color and a figure based on what you tell the computer.</p>
+                       <div class="button"><a href="https://github.com/JuanColonGarcia/Recomocimiento_voz"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                   </div>
+               </div>
+               <!--<div class="portfolio portfolio-eighth">
+                   <div class=" portfolio-image">
+                       <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
+                   </div>
+                   <div class="portfolio-text">
+                       <h2>Wow Graphics</h2>
+                       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
+                            expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                       <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                   </div> 
+               </div>    
+                 </div>-->
 
                  <div class="footer">
                 <div class="footer-text">
