--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                       <br>
                 <span class="about-second-line">Digital Industry Engineer from the University of Deusto, and currently studying the master's degree in engineering and software systems technology at the Polytechnic University of Valencia. I am passionate about the data science sector.</span>
                 <div class="cv">
-                 <a href="https://drive.google.com/file/d/1X4w7-G82B8KZVb8G8A2hlpIgpMnr7iRM/view?usp=drive_link"><button>Download <span class="colors">CV</span></button></a>             </div>
+                 <a href="https://drive.google.com/file/d/14Di2LbemiJUNtOmzvNpjwtErLTmFcUWv/view?usp=sharing"><button>Download <span class="colors">CV</span></button></a>             </div>
              </div>
              <!--about picture-->
              <div class="about-img">
-                 <img src="images/about.jpeg" alt="My Image">
+                 <img src="images/about1.jpg" alt="My Image">
              </div>
              </div>
  
@@ -237,7 +237,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="html-progress wow">60%</div>
+                  <div class="html-progress wow"></div>
                      </div>
                      </div>
                      <div class="skill-html skill">
@@ -247,7 +247,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="SQL-progress wow">75%</div>
+                  <div class="SQL-progress wow"></div>
                      </div>
                      </div>
                      <div class="skill-html skill">
@@ -257,7 +257,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="Python-progress wow">50%</div>
+                  <div class="Python-progress wow"></div>
                      </div>
                      </div>
                      <div class="skill-html skill">
@@ -267,7 +267,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="Java-progress wow">50%</div>
+                  <div class="Java-progress wow"></div>
                      </div>
                      </div>
                      <div class="skill-html skill">
@@ -277,7 +277,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="jquery-progress wow">65%</div>
+                  <div class="jquery-progress wow"></div>
                      </div>
                      </div>
                      <div class="skill-html skill">
@@ -287,7 +287,7 @@
                      </div>
                          </div>
                      <div class="html-prog wow prog">
-                  <div class="R-progress wow">60%</div>
+                  <div class="R-progress wow"></div>
                      </div>
                      </div>
                  </div>
@@ -372,17 +372,49 @@
                          <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
-               <!--<div class="portfolio portfolio-fourth">
+                  <div class="portfolio portfolio-fourth">
                      <div class=" portfolio-image">
                          <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
                      </div>
                      <div class="portfolio-text">
-                         <h2>Wow Graphics</h2>
-                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                              expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <h2>Metaprogram</h2>
+                         <p>A metaprogram capable of generating the 
+                            control flow graph for different programs using the JavaParser library.</p>
+                         <div class="button"><a href="https://github.com/JuanColonGarcia/Metaprogram"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div> 
-                 </div>  --> 
+                 </div>  
+                 <div class="portfolio portfolio-fifth">
+                    <div class=" portfolio-image">
+                        <img src="images/portfolio-fifth.jpg" alt="portfolio-fifth">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>AndroidProject</h2>
+                        <p>This Android application allows users to interact with a dynamic environment where images of different objects 
+                            (such as trees, benches, rivers, and rocks) can be added, moved, and resized on the screen.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/AndroidProject2"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                    </div> 
+                </div> 
+                <div class="portfolio portfolio-six">
+                    <div class=" portfolio-image">
+                        <img src="images/portfolio-six.jpg" alt="portfolio-six">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>chatbot</h2>
+                        <p>Conversational bot that recommends movies. It uses the services of a CLUIS App published as an Azure resource.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/chatbot"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                    </div> 
+                </div>  
+                <div class="portfolio portfolio-seven">
+                    <div class=" portfolio-image">
+                        <img src="images/portfolio-seven.jpg" alt="portfolio-seven">
+                    </div>
+                    <div class="portfolio-text">
+                        <h2>RESTful Services with Spring Boot</h2>
+                        <p>This project involves creating RESTful services with Spring Boot and developing Python/Java clients to consume them. It covers REST service implementation, task list management (ToDoList), 
+                            database access with multi-layer architecture, and query parameters in RESTful APIs.</p>
+                        <div class="button"><a href="https://github.com/JuanColonGarcia/RESTful-Services-with-Spring-Boot"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                    </div> 
+                </div>  
                   </div>
  
                   <div class="footer">
