--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                      <div class="portfolio-text">
                          <h2>Voice Recognition</h2>
                          <p>An app that recognizes your voice and changes the background color and a figure based on what you tell the computer.</p>
-                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <div class="button"><a href="https://github.com/JuanColonGarcia/Recomocimiento_voz"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
                   <div class="portfolio portfolio-fourth">
