--- a/index.html
+++ b/index.html
@@ -530,10 +530,9 @@
                          <div class="blog-date">Now</div>
                      </div>
                      <div class="blog-text">
-                         <h3>Future...❓</h3>
-                         <p>Right now, I’m fully engaged in my postgraduate studies, giving my best effort to make the most of this opportunity. 
-                             However, I still haven’t figured out what my next step will be. I’m taking this time to reflect on my options 
-                             and consider what direction will best align with my aspirations.  </p>
+                         <h3>AIDIMME</h3>
+                         <p>I’m finishing my master’s degree and working at AIDIMME as an IT Technician in the ICT team, where I develop and implement innovative R&D&I solutions for industrial digitization and Industry 4.0. 
+                                I contribute to European projects on interoperability, data analytics, AR/VR, digital twins, and AI.  </p>
                      </div></a>
                  </div>        
              </div>
@@ -653,3 +652,4 @@
      <script src="js/emailjs-script.js"></script>  <!-- Asegúrate de que la ruta sea correcta -->
  </body>
  </html>
+
